--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "@types/jwt-decode": "^2.2.1",
     "core-js": "2",
+    "jwt-decode": "^2.2.0",
     "rxjs": "^6.5.2",
     "zone.js": "^0.9.1"
   },
